--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -30,7 +30,7 @@ FROM nginx:stable-alpine AS production
 RUN rm /etc/nginx/conf.d/default.conf
 
 
-COPY nginx.conf /etc/nginx/conf.d/
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
 
 COPY --from=builder /app/dist /usr/share/nginx/html
