--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,6 @@ COPY package*.json ./
 
 RUN npm install
 
-
-
 FROM base AS dev
 
 COPY . .
@@ -18,6 +16,10 @@ CMD ["npm", "run", "dev"]
 
 
 FROM base AS builder
+
+ARG ENV_FILE=.env.production
+
+COPY ${ENV_FILE} .env
 
 COPY . .
 
