--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,9 @@ jobs:
 
       - name: Start all services
         run: docker compose up -d
+      - name: Show logs of all services
+        if: failure()
+        run: docker compose logs
 
       - name: Wait for services to be ready
         run: |
@@ -89,7 +92,7 @@ jobs:
                until curl -s http://localhost:3002 > /dev/null; do echo "Waiting for project-service..."; sleep 5; done
                until curl -s http://localhost:3000 > /dev/null; do echo "Waiting for auth-service..."; sleep 5; done
                until curl -s http://localhost:4000 > /dev/null; do echo "Waiting for frontend-service..."; sleep 5; done
-               until curl -s http://localhost:3000 > /dev/null; do echo "Waiting for auth-service..."; sleep 5; done
+               until curl -s http://localhost:3001 > /dev/null; do echo "Waiting for chat-service..."; sleep 5; done
        
       - name: Install MongoDB Shell
         run: |
