--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: Deploy to Amazon ECS
 on:
   push:
     branches:
-      - main
+      - env
 jobs:
   deploy:
     name: Deploy
@@ -23,7 +23,7 @@ jobs:
      ECR_PROJECT_POST_USER_REPOSITORY: project-user-post-repo
      ECR_AUTH_REPOSITORY: auth-repo
      ECR_CHAT_REPOSITORY: chat-repo
-     IMAGE_TAG: latest
+     IMAGE_TAG: ${{ github.sha }}
     
     steps:
       - name: Checkout
@@ -51,6 +51,11 @@ jobs:
                echo "Waiting for MongoDB..."
                sleep 5
              done
+
+      - name: Création du fichier nginx
+        run: |
+          cd frontend
+          echo "${{ secrets.NGINX }}" >> nginx.conf
          
         # ****se connecter à aws***
         
@@ -86,6 +91,7 @@ jobs:
           TF_VAR_MYSQL_ADMIN_PASSWORD: ${{ secrets.MYSQL_ADMIN_PASSWORD }}
           TF_VAR_MYSQL_ADMIN_USER: ${{ secrets.MYSQL_ADMIN_USER }}
           TF_VAR_DB_HOST: ${{ secrets.DB_HOST }}
+          hash: ${{env.IMAGE_TAG}}
         run: |
          terraform init
          terraform validate
