--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,11 +10,11 @@ services:
     container_name: frontend-service
     restart: always
     ports:
-      - "4000:80"     
+      - "4000:8080"     
     networks:
       - cda-networks
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost"]
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8080"]
       interval: 30s
       timeout: 10s
       retries: 5
