--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       PORT: ${PORT_FRONTEND}
       NODE_ENV: ${MODE} 
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost"]
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:4000"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -195,7 +195,9 @@ services:
     volumes:
       - mongodb_data:/data/db
     healthcheck:
-      test: echo 'db.runCommand("ping").ok' |  mongosh --authenticationDatabase admin --host localhost -u ${MONGO_INITDB_ROOT_USERNAME} -p ${MONGO_INITDB_ROOT_PASSWORD} admin --quiet | grep -q 1
+      test: |
+       echo 'db.runCommand("ping").ok' |  mongosh --authenticationDatabase 
+       admin --host localhost -u ${MONGO_INITDB_ROOT_USERNAME} -p ${MONGO_INITDB_ROOT_PASSWORD} admin --quiet | grep -q 1
       interval: 10s
       timeout: 5s
       retries: 5
