--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -195,9 +195,7 @@ services:
     volumes:
       - mongodb_data:/data/db
     healthcheck:
-      test: |
-       echo 'db.runCommand("ping").ok' |  mongosh --authenticationDatabase 
-       admin --host localhost -u ${MONGO_INITDB_ROOT_USERNAME} -p ${MONGO_INITDB_ROOT_PASSWORD} admin --quiet | grep -q 1
+      test: echo 'db.runCommand("ping").ok' |  mongosh --authenticationDatabase admin --host localhost -u ${MONGO_INITDB_ROOT_USERNAME} -p ${MONGO_INITDB_ROOT_PASSWORD} admin --quiet | grep -q 1
       interval: 10s
       timeout: 5s
       retries: 5
