--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI - Docker Compose Tests
 on: 
   push:
     branches:
-      - dev
+      - main
 jobs:
   test-services:
     runs-on: ubuntu-latest
